WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 201791
[LFC] FormattingContext::Geometry::computedHeightValue should not read containing block's height.
https://bugs.webkit.org/show_bug.cgi?id=201791
Summary
[LFC] FormattingContext::Geometry::computedHeightValue should not read contai...
zalan
Reported
2019-09-13 21:13:40 PDT
The constraint value should be pushed down to this function instead.
Attachments
Patch
(16.57 KB, patch)
2019-09-14 04:49 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(17.12 KB, patch)
2019-09-14 05:04 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-13 21:14:08 PDT
<
rdar://problem/55361695
>
zalan
Comment 2
2019-09-14 04:49:52 PDT
Created
attachment 378791
[details]
Patch
zalan
Comment 3
2019-09-14 05:04:38 PDT
Created
attachment 378792
[details]
Patch
WebKit Commit Bot
Comment 4
2019-09-14 06:55:41 PDT
Comment on
attachment 378792
[details]
Patch Clearing flags on attachment: 378792 Committed
r249873
: <
https://trac.webkit.org/changeset/249873
>
WebKit Commit Bot
Comment 5
2019-09-14 06:55:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug